change in homepage url

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://kshiteeshsn.github.io/elFinance",
+  "homepage": "https://Kshiteeshsn.github.io/elFinance",
   "dependencies": {
     "gh-pages": "^2.1.1"
   }
